--- a/styles.css
+++ b/styles.css
@@ -17,3 +17,9 @@ h1 {
     font-size: 124px;
     margin: 30px;
 }
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
