Add flex setting for main game container

--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,12 @@ div {
     outline-style: dotted;
 }
 
+#game {
+    display: flex;
+    justify-content: space-between;
+}
+
 #container {
-    margin: auto;
     height: 600px;
     width: 600px;
     display: flex;
