--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,10 @@
 #left-menu, #right-menu {
     width: 33%;
     display: flex;
-    align-items: flex-start;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 50px;
 }
 
 #container {
